--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -94,6 +94,7 @@ $default_fontsize: 14px
 
   .trips_content
     width: 100%
+    min-height: 400px
     max-width: 1120px
     padding: 20px
     display: flex
