feat: Added trip details front end logic

--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
 <script src="~/js/main.js" asp-append-version="true"></script>
 <script src="~/js/stations.js" asp-append-version="true"></script>
 <script src="~/js/planner.js" asp-append-version="true"></script>
+<script src="~/js/trips.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
