--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -73,9 +73,7 @@
             </div>
             <div class="trips_details">
                 <div class="trips_title">Reisadvies</div>
-                <div class="trips_legs">
-                    
-                </div>
+                <div class="trips_legs"></div>
             </div>
         }
     </div>
