--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -59,12 +59,12 @@
                     <div class="trips_result">
                         <div class="trips_row">
                             <div class="trips_times">
-                                <span class="trips_timespan">@trip.PlannedDepartureTime</span>
+                                <span class="trips_timespan">@trip.PlannedDepartureDateTime.ToString("HH\\:mm")</span>
                                 <span>></span>
-                                <span class="trips_timespan">@trip.PlannedArrivalTime</span>
+                                <span class="trips_timespan">@trip.PlannedArrivalDateTime.ToString("HH\\:mm")</span>
                             </div>
                             <div class="trip_info">
-                                <span>@trip.PlannedDuration</span>
+                                <span>@TimeSpan.FromMinutes(trip.PlannedDurationInMinutes).ToString("hh\\:mm")</span>
                                 <span>@trip.Transfers</span>
                             </div>
                         </div>
