--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -106,6 +106,7 @@ $default_fontsize: 14px
       .trips_result
         width: 100%
         height: 80px
+        color: black
         background-color: white
         margin-bottom: 20px
         border-radius: 4px
@@ -114,6 +115,7 @@ $default_fontsize: 14px
         flex-direction: column
         justify-content: center
         align-items: center
+        text-decoration: none
         
         .trips_row
           width: 100%
