--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -101,6 +101,7 @@
 .trips .trips_content .trips_results .trips_result {
   width: 100%;
   height: 80px;
+  color: black;
   background-color: white;
   margin-bottom: 20px;
   border-radius: 4px;
@@ -109,6 +110,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
 }
 .trips .trips_content .trips_results .trips_result .trips_row {
   width: 100%;
