--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -14,7 +14,6 @@
         <div class="banner_planner">
             <h1>Plan je reis</h1>
             <form class="planner" method="get">
-                <input type="hidden" name="handler" value="Trips" />
                 <div class="planner_search">
                     <div class="stations_search">
                         <label>van</label>
@@ -55,7 +54,7 @@
             <div class="trips_results">
                 @foreach (var trip in Model.Trips)
                 {
-                    <a class="trips_result" href="?handler=TripDetails&context=@Html.Raw(Uri.EscapeDataString(trip.Context))">
+                    <a class="trips_result" href="?@trip.Ref">
                         <div class="trips_row">
                             <div class="trips_times">
                                 <span class="trips_timespan">@trip.PlannedDepartureTime</span>
