feat: Implemented AJAX for trips response

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="banner_content">
         <div class="banner_planner">
             <h1>Plan je reis</h1>
-            <form class="planner" method="get">
+            <form class="planner">
                 <div class="planner_search">
                     <div class="stations_search">
                         <label>van</label>
