--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -54,7 +54,7 @@
             <div class="trips_results">
                 @foreach (var trip in Model.Trips)
                 {
-                    <a class="trips_result" href="?@trip.Ref">
+                    <a class="trips_result" href="trip.Ref">
                         <div class="trips_row">
                             <div class="trips_times">
                                 <span class="trips_timespan">@trip.PlannedDepartureTime</span>
