--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 <script src="~/js/stations.js" asp-append-version="true"></script>
 <script src="~/js/planner.js" asp-append-version="true"></script>
 <script src="~/js/trips.js" asp-append-version="true"></script>
-<script src="~/js/tripdetails.js" asp-append-version="true"></script>
+<script src="~/js/trips.template.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
