--- a/StudiGO.Web/wwwroot/css/layout.css
+++ b/StudiGO.Web/wwwroot/css/layout.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Source Sans 3", sans-serif;
 }
 
 body {
