feat: Ordered the search form

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -21,15 +21,12 @@
                 </div>
             </div>
             <div class="planner_buttons">
-                <div class="planner_date">
+                <div class="planner_datetime">
                     <input name="date" type="date" required/>
-                </div>
-
-                <div class="planner_time">
                     <input name="time" type="time" required/>
                 </div>
-
-                <input type="submit" value="Submit"/>
+                
+                <input class="planner_submit" type="submit" value="Plannen"/>
             </div>
         </form>
     </div>
