--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -1,9 +1,10 @@
 .planner {
   width: 100%;
+  height: 250px;
   background-color: gray;
   display: flex;
   justify-content: center;
-  padding: 30px 0;
+  align-items: center;
 }
 .planner .planner_content {
   width: 100%;
@@ -24,12 +25,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 .planner .planner_content .planner_form .planner_search .stations_search {
   flex: 1;
 }
 .planner .planner_content .planner_form .planner_search .stations_search input {
   padding: 0 10px 0 50px;
+  font-size: 16px;
+  border-radius: 5px;
 }
 .planner .planner_content .planner_form .planner_search .stations_search label {
   width: 50px;
@@ -39,7 +43,7 @@
   justify-content: center;
   align-items: center;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 16px;
 }
 .planner .planner_content .planner_form .planner_search .planner_switch {
   width: 55px;
@@ -47,6 +51,30 @@
   border-radius: 55px;
   background-color: darkgray;
   margin: 0 20px;
+  cursor: pointer;
+}
+.planner .planner_content .planner_form .planner_buttons {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.planner .planner_content .planner_form .planner_buttons .planner_datetime input {
+  height: 40px;
+  border-radius: 5px;
+  border: 0;
+  font-size: 16px;
+  margin-right: 10px;
+  padding: 0 10px;
+}
+.planner .planner_content .planner_form .planner_buttons .planner_submit {
+  width: 150px;
+  background-color: #606060;
+  color: white;
+  border-radius: 5px;
+  border: 0;
+  font-size: 16px;
+  font-weight: 600;
   cursor: pointer;
 }
 
@@ -195,7 +223,7 @@
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
   margin: 20px 0;
-  font-size: 14px;
+  font-size: 16px;
 }
 .trips .trips_content .trips_details .trips_legs .trips_transfer {
   width: 100%;
@@ -226,7 +254,7 @@
   justify-content: center;
   flex-direction: column;
   margin: 20px 0;
-  font-size: 14px;
+  font-size: 16px;
   padding: 0 30px;
 }
 
