--- a/StudiGO.Web/Styles/stations.sass
+++ b/StudiGO.Web/Styles/stations.sass
@@ -1,4 +1,4 @@
-$default_fontsize: 14px
+$default_fontsize: 16px
 
 .stations_search
   width: 300px
@@ -12,7 +12,7 @@ $default_fontsize: 14px
     
   .stations_results
     width: 100%
-    max-height: 200px
+    max-height: 240px
     overflow-y: scroll
     background-color: white
     border-radius: 5px
@@ -22,14 +22,34 @@ $default_fontsize: 14px
     
     div
       width: 100%
-      height: 50px
+      height: 60px
       display: flex
-      align-items: center
+      flex-direction: column
+      justify-content: center
       text-overflow: ellipsis
-      padding: 0 10px
+      padding: 0 10px 0 50px
       font-size: $default_fontsize
       transition: 0.3s
+      position: relative
+
+      label
+        width: 50px
+        height: 100%
+        position: absolute
+        left: 0
+        display: flex
+        justify-content: center
+        align-items: center
+        font-weight: 600
+        font-size: $default_fontsize
       
+      span
+        width: 100%
+      
+      span:nth-child(3)
+        opacity: 0.5
+        font-size: $default_fontsize - 2px
+        
       &:hover
         background-color: cornflowerblue
         color: white
