--- a/StudiGO.Web/wwwroot/css/stations.css
+++ b/StudiGO.Web/wwwroot/css/stations.css
@@ -10,7 +10,7 @@
 }
 .stations_search .stations_results {
   width: 100%;
-  max-height: 200px;
+  max-height: 240px;
   overflow-y: scroll;
   background-color: white;
   border-radius: 5px;
@@ -20,13 +20,33 @@
 }
 .stations_search .stations_results div {
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   text-overflow: ellipsis;
-  padding: 0 10px;
-  font-size: 14px;
+  padding: 0 10px 0 50px;
+  font-size: 16px;
   transition: 0.3s;
+  position: relative;
+}
+.stations_search .stations_results div label {
+  width: 50px;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 16px;
+}
+.stations_search .stations_results div span {
+  width: 100%;
+}
+.stations_search .stations_results div span:nth-child(3) {
+  opacity: 0.5;
+  font-size: 14px;
 }
 .stations_search .stations_results div:hover {
   background-color: cornflowerblue;
