fix: Date time input

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -22,8 +22,8 @@
             </div>
             <div class="planner_buttons">
                 <div class="planner_datetime">
-                    <input name="date" type="date" required/>
-                    <input name="time" type="time" required/>
+                    <input type="date" name="date" id="date" required/>
+                    <input type="time" name="time" id="time" required/>
                 </div>
                 
                 <input class="planner_submit" type="submit" value="Plannen"/>
