feat: Added label to date and time inputs

--- a/StudiGO.Web/Pages/Index.cshtml
+++ b/StudiGO.Web/Pages/Index.cshtml
@@ -22,8 +22,14 @@
             </div>
             <div class="planner_buttons">
                 <div class="planner_datetime">
-                    <input type="date" name="date" id="date" required/>
-                    <input type="time" name="time" id="time" required/>
+                    <div class="planner_date">
+                        <label>O</label>
+                        <input type="date" name="date" id="date" required/>
+                    </div>
+                    <div class="planner_time">
+                        <label>O</label>
+                        <input type="time" name="time" id="time" required/>
+                    </div>
                 </div>
                 
                 <input class="planner_submit" type="submit" value="Plannen"/>
