feat: Added icons to planner element

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -51,6 +51,9 @@ $main: #606060
             align-items: center
             font-weight: 600
             font-size: $default_fontsize
+            
+          svg
+            font-size: 28px
           
         .planner_switch
           width: 55px
@@ -83,6 +86,7 @@ $main: #606060
               position: absolute
               border-radius: 5px
               color: white
+              font-size: 24px
           
             input
               height: 40px
