feat: Added switch icon

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -58,10 +58,15 @@ $main: #606060
         .planner_switch
           width: 55px
           height: 55px
+          display: flex
+          justify-content: center
+          align-items: center
           border-radius: 55px
           background-color: darkgray
           margin: 0 20px
           cursor: pointer
+          font-size: 40px
+          color: white
           
       .planner_buttons
         width: 100%
