--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -40,7 +40,7 @@ $main: #606060
           input
             padding: 0 10px 0 50px
             font-size: $default_fontsize
-            border-radius: 5px
+            border-radius: 6px
           
           label
             width: 50px
@@ -89,13 +89,13 @@ $main: #606060
               align-items: center
               background-color: darkgray
               position: absolute
-              border-radius: 5px
+              border-radius: 6px
               color: white
               font-size: 24px
           
             input
               height: 40px
-              border-radius: 5px
+              border-radius: 6px
               border: 0
               font-size: $default_fontsize
               margin-right: 10px
@@ -105,7 +105,7 @@ $main: #606060
           width: 150px
           background-color: $main
           color: white
-          border-radius: 5px
+          border-radius: 6px
           border: 0
           font-size: $default_fontsize
           font-weight: 600
@@ -132,11 +132,11 @@ $main: #606060
         color: black
         background-color: white
         margin-bottom: 20px
-        border-radius: 4px
-        padding: 0 20px
+        border-radius: 6px
+        padding: 10px 20px
         display: flex
         flex-direction: column
-        justify-content: center
+        justify-content: space-evenly
         align-items: center
         text-decoration: none
         
@@ -144,18 +144,29 @@ $main: #606060
           width: 100%
           display: flex
           justify-content: space-between
-          
-          .trips_times
             
-            .trips_timespan
+          div
+            display: flex
+            align-items: center
+            
+          .trips_times 
+            span
               font-size: 18px
               font-weight: 600
+            svg
+              margin: 0 5px
+              
+          .trips_transport
+            svg
+              font-size: 24px
+              color: gray
+              margin-right: 5px
     
     .trips_details
       width: 50%
       background-color: white
       margin-left: 10px
-      border-radius: 4px
+      border-radius: 6px
       height: fit-content
       padding-bottom: 30px
       
