--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -128,10 +128,10 @@ $main: #606060
       
       .trips_result
         width: 100%
-        height: 80px
+        height: 90px
         color: black
         background-color: white
-        margin-bottom: 20px
+        margin-bottom: 10px
         border-radius: 6px
         padding: 10px 20px
         display: flex
@@ -139,6 +139,7 @@ $main: #606060
         justify-content: space-evenly
         align-items: center
         text-decoration: none
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1)
         
         .trips_row
           width: 100%
@@ -161,6 +162,11 @@ $main: #606060
               font-size: 24px
               color: gray
               margin-right: 5px
+              
+          .trips_info
+            svg
+              font-size: $default_fontsize + 2px
+              margin: 0 5px 0 10px
     
     .trips_details
       width: 50%
@@ -169,6 +175,7 @@ $main: #606060
       border-radius: 6px
       height: fit-content
       padding-bottom: 30px
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1)
       
       .trips_title
         width: 100%
