feat: Added shadow to search results

--- a/StudiGO.Web/Styles/stations.sass
+++ b/StudiGO.Web/Styles/stations.sass
@@ -19,6 +19,7 @@ $default_fontsize: 16px
     position: absolute
     z-index: 99
     margin-top: 5px
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1)
     
     div
       width: 100%
