feat: Added selected visual representation

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -167,6 +167,9 @@ $main: #606060
             svg
               font-size: $default_fontsize + 2px
               margin: 0 5px 0 10px
+              
+      .trip_result-selected
+        outline: 2px solid cornflowerblue
     
     .trips_details
       width: 50%
