--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -163,6 +163,9 @@
   font-size: 18px;
   margin: 0 5px 0 10px;
 }
+.trips .trips_content .trips_results .trip_result-selected {
+  outline: 2px solid cornflowerblue;
+}
 .trips .trips_content .trips_details {
   width: 50%;
   background-color: white;
