feat: Added delay to trip details

--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -207,17 +207,26 @@
   font-size: 42px;
   color: gray;
 }
-.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times span {
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times .trips_time {
+  display: flex;
+  flex-direction: column;
   font-size: 18px;
   font-weight: 600;
-}
-.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times span:nth-child(1) {
   position: relative;
-  top: -5px;
 }
-.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times span:nth-child(2) {
-  position: relative;
-  bottom: -5px;
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times .trips_time:nth-child(1) {
+  top: -6px;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times .trips_time:nth-child(3) {
+  bottom: -6px;
+}
+.trips .trips_content .trips_details .trips_legs .trips_leg .trips_times .trips_time span {
+  color: red;
+  font-size: 16px;
+  font-weight: bold;
+  position: absolute;
+  right: 0;
+  bottom: -14px;
 }
 .trips .trips_content .trips_details .trips_legs .trips_leg .trips_graphic {
   height: 100%;
