--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -212,17 +212,26 @@ $main: #606060
               font-size: 42px
               color: gray
               
-            span
+            .trips_time
+              display: flex
+              flex-direction: column
               font-size: 18px
               font-weight: 600
+              position: relative
               
               &:nth-child(1)
-                position: relative
-                top: -5px
+                top: -6px
                 
-              &:nth-child(2)
-                position: relative
-                bottom: -5px
+              &:nth-child(3)
+                bottom: -6px
+              
+              span
+                color: red
+                font-size: 16px
+                font-weight: bold
+                position: absolute
+                right: 0
+                bottom: -14px
               
           .trips_graphic
             height: 100%
