--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -157,6 +157,9 @@ $main: #606060
             svg
               margin: 0 5px
               
+            .trips_delay
+              color: red
+              
           .trips_transport
             svg
               font-size: 24px
