--- a/StudiGO.Web/wwwroot/css/main.css
+++ b/StudiGO.Web/wwwroot/css/main.css
@@ -154,6 +154,9 @@
 .trips .trips_content .trips_results .trips_result .trips_row .trips_times svg {
   margin: 0 5px;
 }
+.trips .trips_content .trips_results .trips_result .trips_row .trips_times .trips_delay {
+  color: red;
+}
 .trips .trips_content .trips_results .trips_result .trips_row .trips_transport svg {
   font-size: 24px;
   color: gray;
