feat: Added extra duration color

--- a/StudiGO.Web/Styles/main.sass
+++ b/StudiGO.Web/Styles/main.sass
@@ -171,6 +171,9 @@ $main: #606060
               font-size: $default_fontsize + 2px
               margin: 0 5px 0 10px
               
+            .trips_duration-delayed
+              color: red
+              
       .trip_result-selected
         outline: 2px solid cornflowerblue
     
