--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
             <div></div>
             <span>StudiGO</span>
         </div>
+        <a class="nav-link text-dark display-6" asp-area=""
+           asp-page="Login">Login</a>
     </div>
 </header>
 
