feat: Renamed auth

--- a/StudiGO.Web/Pages/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <span>StudiGO</span>
         </div>
         <a class="nav-link text-dark display-6" asp-area=""
-           asp-page="Login">Login</a>
+           asp-page="Auth">Login</a>
     </div>
 </header>
 
