feat: Added auth0 link back

--- a/StudiGO.Web/Views/Shared/_Layout.cshtml
+++ b/StudiGO.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
             <div></div>
             <span>StudiGO</span>
         </div>
+        <a asp-controller="Auth" asp-action="Login">Login</a>
     </div>
 </header>
 
