feat: Fixed stations object

--- a/StudiGO.Web/Views/Shared/_StationsPartial.cshtml
+++ b/StudiGO.Web/Views/Shared/_StationsPartial.cshtml
@@ -2,7 +2,7 @@
 
 @model StationsDto;
 
-@foreach (var station in Model.payload)
+@foreach (var station in Model.Payload)
 {
     <div>
         <label>
